manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service-api
  namespace: kiran-nagp-ns
  labels:
    app: products-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
        - name: products-service
          image: kiranbabun/products-service:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: kiran-nagp-ns
spec:
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
  selector:
    app: products-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress-service
  namespace: kiran-nagp-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /v1/products-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-service
                port:
                  number: 8000
